[build-system]
requires = [
    "build",
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "litegraph"
dynamic = ["version"]
description = "A Graph Node Engine"
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3.8',
]
keywords = [
    'Deep Learning',
    'Artificial Intelligence',
]
requires-python = ">= 3.8"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/jiauzhang/litegraph"

[tool.setuptools]
package-dir = {"litegraph" = "litegraph"}

[tool.setuptools.dynamic]
version = {attr = "litegraph.__version__"}

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
